0.12.0
------

* Removed Row.table.
* Migrated column-related functionality from Table to ColumnMapping. (#293)
* Performance improvements for Table "forks". (where, limit, etc)
* TableSet keys are now converted to row aliases during aggregation. (#291)
* Migrated row-related functionality from Table to RowSequence.
* Simplified implementation of Row for speed and consistency. No API changes.
* Removed fancy __repr__ implementations. Use __str__ instead. (#290)
* ColumnMapping now supports slicing for consistency. (#286)
* RowSequence can not be accessed by alias as well as index. (#282)
* Added row_alias argument to Table constructor. (#282)
* Removed Row.index property as it violated immutability of rows. (#287)
* ColumnMapping can now be accessed by index as well as name. (#281)
* Added column name and type validation to Table constructor. (#285)
* Table now supports variable-length rows during construction. (#39)
* aggregations.Summary implemented for generic aggregations. (#181)
* Fix TableSet.key_type being lost after proxying Table methods. (#278)
* Massive performance increases for joins. (#277)
* Add join benchmark. (#73)

0.11.0
------

* Implemented __repr__ for Table, TableSet, Column and Row. (#261)
* Row.index property added.
* Column constructor no longer takes a data_type argument.
* Column.index and Column.name properties added.
* Table.counts implemented. (#271)
* Table.bins implemented. (#267, #227)
* Table.join now raises ColumnDoesNotExistError. (#264)
* Table.select now raises ColumnDoesNotExistError.
* computations.ZScores moved into agate-stats.
* computations.Rank cmp argument renamed comparer.
* aggregations.MaxPrecision added. (#265)
* Table.print_bars added.
* Table.pretty_print renamed Table.print_table.
* Reimplement Table method proxying via @allow_tableset_proxy decorator. (#263)
* Add agate-stats references to docs.
* Move stdev_outliers, mad_outliers and pearson_correlation into agate-stats. (#260)